Customized launch page

--- a/lib/launch/get_started.html
+++ b/lib/launch/get_started.html
@@ -14,13 +14,13 @@
       <div class="col-md-6 column">
         <div class="jumbotron">
           <h1>
-            Hello, world!
+            Yay, your Glacier app is up and running!
           </h1>
           <p>
-            This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.
+            This is the launch page for your app, please go through the Glacier documentation to learn how to build apps using this universal framework, currently supporting Ruby, Python, and PHP programming languages.
           </p>
           <p>
-            <a class="btn btn-primary btn-large" href="#">Learn more</a>
+            <a class="btn btn-primary btn-large" href="https://github.com/jordanhudgens/glacier">Documentation</a>
           </p>
         </div>
       </div>
