--- a/lib/launch/get_started.html
+++ b/lib/launch/get_started.html
@@ -5,7 +5,7 @@
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </head>
 
-<body>
+<body style="background-color: #cc763b; !important;">
 
   <div class="container">
     <div class="row clearfix">
